--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="./css/hero.css">
     <title>Hero Team</title>
+    <script src="https://kit.fontawesome.com/ff4a61c743.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -34,6 +35,69 @@
             <button class="btn btn-white">View Our Work</button>
         </div>
     </header>
+    <!-- Service Section  -->
+    <section class="services-section container">
+        <div class="heading-section">
+            <h3>Services</h3>
+            <span></span>
+        </div>
+        <div class="services">
+            <div class="service">
+                <div class="service-icon">
+                    <i class="fa fa-paint-brush fa-3x"></i>
+                </div>
+                <div class="service-info">
+                    <h3>Web Design</h3>
+                    <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                </div>
+            </div>
+            <div class="service">
+                <div class="service-icon">
+                    <i class="fa fa-laptop fa-3x"></i>
+                </div>
+                <div class="service-info">
+                    <h3>Web Development</h3>
+                    <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                </div>
+            </div>
+            <div class="service">
+                <div class="service-icon">
+                    <i class="fa fa-tablet-alt fa-3x"></i>
+                </div>
+                <div class="service-info">
+                    <h3>Mobile Apps</h3>
+                    <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                </div>
+            </div>
+            <div class="service">
+                <div class="service-icon">
+                    <i class="fa fa-search fa-3x"></i>
+                </div>
+                <div class="service-info">
+                    <h3>Seo Optimization</h3>
+                    <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                </div>
+            </div>
+            <div class="service">
+                <div class="service-icon">
+                    <i class="fa fa-pencil-ruler fa-3x"></i>
+                </div>
+                <div class="service-info">
+                    <h3>UX Design</h3>
+                    <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                </div>
+            </div>
+            <div class="service">
+                <div class="service-icon">
+                    <i class="fa fa-life-ring fa-3x"></i>
+                </div>
+                <div class="service-info">
+                    <h3>Support</h3>
+                    <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
