[Completed] About Section

--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 
 <body>
     <!-- Header Part  -->
-    <header>
-        <nav class="container">
+    <header id="home">
+        <nav class="container-fluid">
             <div class="logo">
                 <img src="./images/logo.png" alt="">
             </div>
             <ul class="navigation">
-                <ll><a href="home">Home</a></ll>
-                <ll><a href="/services">Services</a></ll>
-                <ll><a href="/about">About</a></ll>
-                <ll><a href="/">About</a></ll>
+                <ll><a href="#home">Home</a></ll>
+                <ll><a href="#services">Services</a></ll>
+                <ll><a href="#about">About</a></ll>
                 <ll><a href="/">Work</a></ll>
                 <ll><a href="/">Team</a></ll>
                 <ll><a href="/">Pricing</a></ll>
@@ -36,7 +35,7 @@
         </div>
     </header>
     <!-- Service Section  -->
-    <section class="services-section container">
+    <section id="services" class="services-section container">
         <div class="heading-section">
             <h3>Services</h3>
             <span></span>
@@ -95,6 +94,20 @@
                     <h3>Support</h3>
                     <p>Tamen fabulas id varias tamen qui nam enim.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="about" class="about-section">
+        <div class="about">
+            <div class="heading-section">
+                <h3>About Hero Team</h3>
+                <span></span>
+                <p>Magna arbitror et dolor amet, fabulas do noster non eu mentitum praesentibus e est ex quid
+                    cupidatat.
+                    Dolore reprehenderit probant quorum tempor, illum hic ut illum pariatur. Qui o magna aute
+                    labore.
+                </p>
+                <button class="btn btn-cyan">Our Work</button>
             </div>
         </div>
     </section>
